CMAKE_MINIMUM_REQUIRED(VERSION 2.8 )

SET_PROPERTY(GLOBAL PROPERTY USE_FOLDERS ON)

PROJECT(extract_param)

SET(TARGETNAME extract_param_test)

SET(TARGET_SRC src/extract_param_type_main.cpp)
SOURCE_GROUP("source_file" FILES ${TARGET_SRC})

SET(TARGET_HEADER src/extract_param_type.hpp)
SOURCE_GROUP("header_file" FILES ${TARGET_HEADER})

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/bin/${CMAKE_VS_PLATFORM_NAME})
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/lib/${CMAKE_VS_PLATFORM_NAME})
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/lib/${CMAKE_VS_PLATFORM_NAME})

ADD_EXECUTABLE(${TARGETNAME} ${TARGET_SRC} ${TARGET_HEADER})

SET_TARGET_PROPERTIES(${TARGETNAME} PROPERTIES FOLDER "CODE_FOLDER")